feat(SeniorArchitectTest) [xjl003] 企业信息化知识课件的更新补充

--- a/02-SeniorArchitectTest各个章节知识点/01-企业信息化战略与实施/01-企业信息化战略与实施.md
+++ b/02-SeniorArchitectTest各个章节知识点/01-企业信息化战略与实施/01-企业信息化战略与实施.md
@@ -1,24 +1,31 @@
-# 01-企业信息化战略与实施
+# 企业信息化战略与实施
 
 ---
-企业信息化战略与实施
 1. 信息与信息化的概念
-2. 信息系统生命周期
-3. 信息系统战略规划
+2. 信息系统战略规划
+3. 信息系统生命周期
 4. 政府信息化与电子政务
 5. 企业信息化与电子商务
+   - 5.1 企业资源计划
+   - 5.2 客户关系管理
+   - 5.3 供应链管理
+   - 5.4 产品数据管理
+   - 5.5 商业智能
+   - 5.6 决策支持系统
+   - 5.7 知识管理
+   - 5.8 业务流程重组
 6. 企业门户
 7. 企业应用集成
 
 ---
 
-## 信息的概念及特点
+# 一、信息的概念及特点
 
-### 信息的定义
+## 信息的定义
 * 香农∶信息就是不确定性的减少。
 * 维纳:信息就是信息，既不是物质，也不是能量。
 
-### 信息的特点
+## 信息的特点
 * 客观性（真伪性）∶也叫事实性，不符合事实的信息不仅没价值，还有副作用。
 * 动态性:信息随着时间的变化而变化。
 * 层次性:信息可分为战略级、管理级和操作级。
@@ -27,11 +34,11 @@
 * 扩压性:信息和实物不同，它可以扩散也可以压缩。
 * 分享性:信息可以分享，这和物质不同，并且信息分享具有非零和性。
 
-### 信息化的概念
+## 信息化的概念
 * 信息化是从工业社会到信息社会的演进与变革。
 * 信息化的主体是全体社会成员（政府、企业、团体和个人），时域是一个长期过程，空域是经济和社会的一切领域，手段是先进社会生产工具。
 
-### 信息化对组织的意义
+## 信息化对组织的意义
 * 组织的结构创新︰如虚拟企业、虚拟社区。
 * 组织的管理创新:实施电子政务、建立电子政府、建立电子社区以提升管理水平。
 * 组织经营创新∶利用信息化将经营和管理融为一体。
@@ -39,30 +46,29 @@
 
 ![img.png](images/01.png)
 
-## 信息系统战略规划-方法
+# 二、信息系统战略规划-方法
 
-### 第一阶段：以数据处理为核心围绕职能部门需求
+## 第一阶段：以数据处理为核心围绕职能部门需求
 * 企业系统规划法(BSP): **自上而下识别系统目标，自下而上设计信息系统**，对组织机构的变动具有适应性。
 * 关键成功因素法（CSF):找实现目标的关键信息集合，从而确定**开发优先次序**。
 * 战略集合转化法(SST):把战略目标看成**信息集合，把战略目标转变成信息系统的战略目标**。
 
-### 第二阶段：以企业内部MIS为核心围绕企业整体需求
+## 第二阶段：以企业内部MIS为核心围绕企业整体需求
 * 战略数据规划法（SDP)
 * 信息工程法(IE)
 * 战略栅格法(SG)
 
-### 第三阶段：综合考虑企业内外环境以集成为核心，围绕企业战略需求
+## 第三阶段：综合考虑企业内外环境以集成为核心，围绕企业战略需求
 * 价值链分析法(VCA)
 * 战略一致性模型(SAM)
 
-
-## 信息系统的生命周期
+# 三、 信息系统的生命周期
 
 ![img.png](images/02.png)
 
 ![img.png](images/03.png)
 
-## 政府信息化与电子政务
+# 四、政府信息化与电子政务
 
 ![img.png](images/04.png)
 
@@ -70,3 +76,138 @@
 * 政府对企业(G2B）或B2G(Government To Business）
 * 政府对公民(G2c)或C2G( Government To Citizen)
 * 政府对公务员(G2E)(Government To Employee）
+
+# 五、企业信息化与电子商务
+
+## 企业信息化与电子商务-企业资源计划（ERP)
+
+* 管理思想︰他是管理思想的变革。
+* 软件产品︰但不是直接买来就用，需要个性化的开发与部署。
+* 管理系统:存在众多的子系统，这些**子系统有统一的规划**，是互联互通的，便于事前事中监控。
+
+![img.png](images/05.png)
+
+* 财会管理
+    * 会计核算
+    * 财务管理
+* 生产控制管理
+    * 主生产计划
+    * 物料需求计划
+    * 能力需求计划
+    * 车间控制
+    * 制造标准
+* 人力资源管理
+    * 人力资源规划
+    * 招聘管理
+    * 工资核算
+    * 工时管理
+    * 差旅费核算
+* 物流管理
+    * 分销管理
+    * 采购管理
+    * 库存控制
+
+## 企业信息化与电子商务＋客户关系管理(CRM)
+
+通过维护客户关系，让企业获得利益
+
+![img_1.png](images/06.png)
+
+## 企业信息化与电子商务–供应链管理(SCM)
+
+SCM理念∶强强联合，整合与优化“三流”，打通企业间“信息孤岛”，严格的数据交换标准。
+
+![img.png](images/07.png)
+
+* 信息化的三流
+    * 信息流(核心)
+        * 需求信息流︰如客户订单、生产计划、采购合同等。
+        * 供应信息流︰如入库单、完工报告单、库存记录、可供销售量、提货发运单等。
+    * 资金流
+    * 物流
+
+## 企业信息化与电子商务–商业智能(BI)
+
+![img.png](images/08.png)
+
+### 企业信息化与电子商务–数据仓库
+
+* 数据仓库的特点∶
+    * **面向主题**:数据按主题组织。
+    * **集成的**:消除了源数据中的不一致性，提供整个企业的一致性全局信息。
+    * **相对稳定的(非易失的)︰主要进行查询操作，只有少量的修改和删除操作（或是不删除)**。
+    * **反映历史变化(随着时间变化)**:记录了企业从过去某一时刻到当前各个阶段的信息，可对发展历程和未来趋势做定量分析和预则。
+
+![img.png](images/09.png)
+
+* OLAP: 联机分析处理
+* OLTP: 联机事务处理
+
+### 企业信息化与电子商务–数据挖掘
+
+* 方法
+    * 决策树（构建树结构进行分析)
+    * 神经网络（类似统计学中的判别、回归、聚类等功能)
+    * 遗传算法(三个基本过程︰繁殖（选择)、交叉（重组)、变异(突变）)关联规则挖掘算法（关联规则是描述数据之间存在关系的规则)
+
+* 分类
+    * 关联分析︰挖掘出隐藏在数据间的相互关系。
+    * 序列模式分析:侧重点是分析数据间的前后关系（因果关系)。
+    * 分类分析:为每一个记录赋予一个标记再按标记分类。
+    * 聚类分析:分类分析法的逆过程。
+
+### 企业信息化与电子商务–数据湖
+
+数据湖是一个存储企业的各种各样原始数据的大型仓库，其中的数据可供存取、处理、分析及传输。
+
+数据湖从企业的多个数据源获取原始数据，并且针对不同的目的，同一份原始数据还可能有多种满足特定内部模型格式的数据副本。
+因此，数据湖中被处理的数据可能是任意类型的信息，**从结构化数据到完全非结构化数据**。
+
+![img.png](images/10.png)
+
+* 数据库仓库是经历过**数据清洗过的数据，是一种结构化的数据**
+* 数据湖是**原始数据结构化，半结构化数据**
+
+## 企业信息化与电子商务–决策支持系统(DSS)
+
+![img.png](images/11.png)
+
+## 企业信息化与电子商务-业务流程重组(BPR)
+
+BPR是对企业的业务流程**进行根本性的再思考和彻底性的再设计**，从而获得可以用诸如成本、质量、服务和速度等方面的业绩来衡量的显著性的成就。
+
+![img.png](images/12.png)
+
+## 企业信息化与电子商务-业务流程管理(BPM)
+
+BPM是一种**以规范化的构造端到端的卓越业务流程为中心**，以持续的提高组织业务绩效为目的的系统化方法。
+
+* PDCA闭环的管理过程(戴明环-质量管理工具)
+    * 明确业务流程所欲获取的成果
+    * 开发和计划系统的方法，实现以上成果
+    * 系统地部署方法，确保全面实施
+    * 根据对业务的检查和分析以及持续的学习活动，评估和审查所执行的方法。并进一步提出计划和实施改进措施
+
+1. BPM与BPR管理思想最根本的不同就在于流程管理并不要求对所有的流程进行再造。构造卓越的业务流程并不是流程再造，而是根据现有流程的具体情况，对流程进行规范化的设计。
+2. 流程管理包含三个层面:规范流程、优化流程和再造流程
+
+# 六、企业门户
+
+* 企业网站:注重单向信息传递，缺互动。
+* 企业信息门户(EIP)︰把各种应用系统、数据资源和互联网资源统一集成到企业门户之下。
+* 企业知识门户(EKP)∶企业网站的基础上增加知识性内容。
+* 企业应用门户(EAP)︰实际上是对企业业务流程的集成。它以业务流程和企业应用为核心，把业务流程中功能不同的应用模块通过门户技术集成在一起。
+* 企业通用门户:集以上四者于一身。
+
+# 七、企业应用集成
+
+1. 界面集成∶把各应用系统的界面集成起来，统一入口，产生“整体”感觉。
+2. 数据集成︰数据集成是应用集成和业务过程集成的基础。把不同来源、格式、特点性质的数据在逻辑上或物理上有机地集中，从而为企业提供全面的数据共享。ETL、数据仓库、联邦数据库都可视为数据集成。
+3. 控制集成（功能集成、应用集成）∶业务逻辑层次集成，可以借助于远程过程调用或远程方法调用、面向消息的中间件等技术。
+4. 业务流程集成(过程集成)︰进行业务流程集成时，企业必须对各种业务信息的交换进行定义、授权和管理，以便改进操作、减少成本、提高响应速度。
+
+![img.png](img.png)
+
+* 消息集成:**适用于数据量小、但要求频繁地、立即地、异步地数据交换场合**。
+* 共享数据库∶**实时性强、可以频繁交互，数据的交换属于同步方式**。
+* 文件传输:**适用于数据量大、交换频度小、即时性要求低的情况**。
