feat(SeniorArchitectTest) [xjl004] 企业信息化知识课件的更新补充

--- a/02-SeniorArchitectTest各个章节知识点/01-企业信息化战略与实施/01-企业信息化战略与实施.md
+++ b/02-SeniorArchitectTest各个章节知识点/01-企业信息化战略与实施/01-企业信息化战略与实施.md
@@ -70,12 +70,18 @@
 
 # 四、政府信息化与电子政务
 
-![img.png](images/04.png)
-
 * 政府对政府(G2G) (Government To Government)
 * 政府对企业(G2B）或B2G(Government To Business）
 * 政府对公民(G2c)或C2G( Government To Citizen)
 * 政府对公务员(G2E)(Government To Employee）
+
+![img.png](images/04.png)
+
+电子商务的形式
+* 企业对消费者(B2C)
+* 企业对企业（B2B )
+* 消费者对消费者(C2C)
+* **线上对线下(O2O)**
 
 # 五、企业信息化与电子商务
 
