feat(SeniorArchitectTest) [xjl009] 更新软件工程中软甲开发模型与需求获取和需求分析知识点

--- a/02-SeniorArchitectTest各个章节知识点/02-软件工程/01-软件工程.md
+++ b/02-SeniorArchitectTest各个章节知识点/02-软件工程/01-软件工程.md
@@ -7,14 +7,23 @@
    - 1.3 逆向工程
    - 1.4 净室软件工程
 2. 需求工程
+   - 2.1 需求获取
+   - 2.2 需求分析
+   - 2.3 UML4+1视图
+   - 2.4 UML图
+   - 2.5 UML关系
 
 3. 软件系统建模
 
+
 4. 系统设计
+
 
 5. 测试与评审
 
+
 6. 系统运行与软件维护
+
 
 ---
 # 一、软件开发方法
@@ -83,3 +92,101 @@
 
 ![img_1.png](images/05.png)
 
+### 统一过程模型
+驱动用例、以架构为中文、迭代和增量
+
+1. 初始
+  * 确定项目范围和边界
+  * 识别系统的关键用例
+  * 展示系统的侯选架构
+  * 估计项目费用和时间
+  * 评估项目风险
+
+2. 细化
+  * 分析系统问题领域
+  * 建立软件架构基础
+  * 淘汰最高风险元素
+
+3. 构建
+  * 开发剩余的构件
+  * 构件组装与测试
+
+4. 交付
+   * 进行β测试
+   * 制作发布版本
+   * 用户文档定稿
+   * 确认新系统
+   * 培训、调整产品
+
+![img.png](images/06.png)
+
+### 敏捷模型
+
+适合小型项目的开发，具有自适应、水晶方法、特征驱动开发、极限编程。
+特点：
+* 短平快的会议
+* 小型版本发布
+* 较少的文档
+* 合作为重
+* 客户直接参与
+* 自动化测试
+* 适应性计划调整
+* 结对编程
+* 测试驱动开发
+* 持续集成
+* 重构
+
+![img.png](images/07.png)
+
+![img.png](images/08.png)
+
+## 1.3 逆向工程
+
+1. 实现级︰包括程序的抽象语法树、符号表、过程的设计表示
+2. 结构级︰包括反映程序分量之间相互依赖关系的信息，例如调用图、结构图、程序和数据结构
+3. 功能级︰包括反映程序段功能及程序段之间关系的信息，例如数据和控制流模型
+4. 领域级︰包括反映程序分量或程序诸实体与应用领域概念之间对应关系的信息，例如实体关系模型
+
+![img.png](images/09.png)
+
+## 1.4 净室软件工程
+
+1. 净室即无尘室、洁净室。也就是一个受控污染级别的环境。
+2. 使用盒结构规约（或形式化方法）进行分析和设计建模，并且强调将正确性验证，而不是测试，作为发现和消除错误的主要机制。
+3. 使用统计的测试来获取认证被交付的软件的可靠性所必需的出错率信息。
+
+
+# 二、需求工程
+
+1. 软件需求是指用户对系统在功能、行为、性能、设计约束等方面的期望。
+2. 软件需求是指用户解决问题或达到目标所需的条件或能力，是系统或系统部件要满足合同、标准、规范或其他正式规定文档所需具有的条件或能力，以及反映这些条件或能力的文档说明。
+
+![img.png](images/10.png)
+
+**需求开发**
+  * 需求获取
+  * 需求分析
+  * 需求定义
+  * 需求验证
+
+**需求管理**
+  * 变更控制
+  * 版本控制
+  * 需求跟踪
+  * 需求状态跟踪
+
+## 2.1 需求获取
+
+![img.png](images/11.png)
+
+## 2.2 需求分析
+
+![img.png](images/12.png)
+
+![img.png](images/13.png)
+
+![img.png](images/14.png)
+
+* **实体类**映射需求中的每个实体，实体类保存需要存储在永久存储体中的信息，例如，在线教育平台系统可以提取出学员类和课程类，它们都属于实体类。
+* **控制类**是用于控制用例工作的类，一般是由动宾结构的短语（“动词+名词”或“名词+动词”)转化来的名词，例如，用例“身份验证”可以对应于一个控制类“身份验证器”，它提供了与身份验证相关的所有操作。
+* **边界类**用于封装在用例内、外流动的信息或数据流。边界类位于系统与外界的交接处，包括所有窗体、报表、打印机和扫描仪等硬件的接口，以及与其他系统的接口。
