feat(SeniorArchitectTest) [xjl010] 更新软件系统建模与需求定义、分析、验证以及多种状态图的原理

--- a/02-SeniorArchitectTest各个章节知识点/02-软件工程/01-软件开发方法与需求分析.md
+++ b/02-SeniorArchitectTest各个章节知识点/02-软件工程/01-软件开发方法与需求分析.md
@@ -1,4 +1,4 @@
-# 软件工程
+# 软件开发方法与需求分析
 
 ---
 1. 软件开发方法
@@ -9,8 +9,8 @@
 2. 需求工程
    - 2.1 需求获取
    - 2.2 需求分析
-   - 2.3 UML4+1视图
-   - 2.4 UML图
+   - 2.3 UML图
+   - 2.4 UML4+1视图
    - 2.5 UML关系
 
 3. 软件系统建模
@@ -190,3 +190,130 @@
 * **实体类**映射需求中的每个实体，实体类保存需要存储在永久存储体中的信息，例如，在线教育平台系统可以提取出学员类和课程类，它们都属于实体类。
 * **控制类**是用于控制用例工作的类，一般是由动宾结构的短语（“动词+名词”或“名词+动词”)转化来的名词，例如，用例“身份验证”可以对应于一个控制类“身份验证器”，它提供了与身份验证相关的所有操作。
 * **边界类**用于封装在用例内、外流动的信息或数据流。边界类位于系统与外界的交接处，包括所有窗体、报表、打印机和扫描仪等硬件的接口，以及与其他系统的接口。
+
+![img.png](images/15.png)
+
+
+## 2.3 UML图
+
+1. 静态图(结构图)
+   * 类图:一组类、接口、协作和它们之间的关系对象图:一组对象及它们之间的关系
+   * 构件图:一个封装的类和它的接口
+   * **部署图:软硬件之间映射**
+   * 制品图∶系统的物理结构 
+   * 包图:由模型本身分解而成的组织单元，以及他们之间的依赖关系
+   * 组合结构图
+
+2. 动态图(行为图)
+   * **用例图:系统与外部参与者的交互**
+   * **顺序图∶强调按时间顺序**
+   * **通信图(协作图)**
+   * 状态图:状态转换变迁
+   * **活动图:类似程序流程图，并行行为**
+   * 定时图∶强调实际时间
+   * 交互概览图
+
+![img.png](images/16.png)
+
+![img.png](images/17.png)
+
+![img.png](images/17-1.png)
+
+![img.png](images/18.png)
+
+## 2.4 UML4+1视图
+
+![img.png](images/19.png)
+
+## 2.5 UML关系
+
+![img_1.png](images/20.png)
+
+* 用例建模的流程:
+    * 识别参与者（必须)
+    * 合并需求获得用例(必须)
+    * 细化用例描述（必须)
+    * 调整用例模型（可选)
+
+* 关系包括了:
+    * 包含关系
+    * 扩展关系
+    * 泛化关系
+
+![img.png](images/21.png)
+
+* 包含关系∶其中这个提取出来的公共用例称为抽象用例，而把原始用例称为基本用例或基础用例系︰当可以从两个或两个以上的用例中提取公共行为时，应该使用包含关系来表示它们。
+* 扩展关系:如果一个用例明显地混合了两种或两种以上的不同场景，即根据情况可能发生多种分支，则可以将这个用例分为一个基本用例和一个或多个扩展用例，这样使描述可能更加清晰。
+* 泛化关系︰当多个用例共同拥有一种类似的结构和行为的时候，可以将它们的共性抽象成为父用例，其他的用例作为泛化关系中的子用例。在用例的泛化关系中，子用例是父用例的一种特殊形式，子用例继承了父用例所有的结构、行为和关系。
+
+![img.png](images/22.png)
+
+### 类与对象图
+
+![img.png](images/23.png)
+
+* 1∶表示一个集合中的一个对象对应另一个集合中1个对象。
+* 0..*:表示一个集合中的一个对象对应另一个集合中的0个或多个对象。(可以不对应)
+* 1..*∶表示一个集合中的一个对象对应另一个集合中的一个或多个对象。(至少对应一个)
+* *:表示一个集合中的一个对象对应另一个集合中的多个的对象。
+
+![img.png](images/24.png)
+
+* 依赖关系一个事物发生变化影响另一个事物。
+* 泛化关系:特殊/一般关系
+* 关联关系︰描述了一组链，链是对象之间的连接。
+* 聚合关系:整体与部分生命周期不同。
+* 组合关系∶整体与部分生命周期相同。
+* 实现关系︰接口与类之间的关系
+
+### 顺序图
+
+![img.png](images/25.png)
+
+### 活动图
+
+![img.png](images/26.png)
+
+![img.png](images/27.png)
+
+### 状态图
+
+![img.png](images/28.png)
+
+![img.png](images/29.png)
+
+### 通信图
+
+![img.png](images/30.png)
+
+## 需求定义
+
+1. 严格定义法:
+    * 所有需求都能够被预先定义
+    * 开发人员与用户之间能够准确而清晰地交流
+    * 采用图形/文字可以充分体现最终系统
+
+2. 原型法
+    * 并非所有的需求都能在开发前被准确地说明
+    * 项目参加者之间通常都存在交流上的困难
+    * 需要实际的、可供用户参与的系统模型
+    * 有合适的系统开发环境
+    * 反复是完全需要和值得提倡的，需求一旦确定，就应遵从严格的方法
+
+![img.png](images/31.png)
+
+## 需求的验证
+
+![img_1.png](images/32.png)
+
+## 需求的管理
+
+![img.png](images/33.png)
+
+## 需求的跟踪
+
+![img.png](images/34.png)
+
+## 变更控制
+
+![img.png](images/35.png)
