feat(SeniorArchitectTest) [xjl013] 软件架构风格的原理介绍。包括了数据流风格、调用风格、仓库风格、虚拟机风格、独立构建风格。

--- a/02-SeniorArchitectTest各个章节知识点/02-软件工程/02-软件系统设计.md
+++ b/02-SeniorArchitectTest各个章节知识点/02-软件工程/02-软件系统设计.md
@@ -11,10 +11,10 @@
     - 2.1 软件测试方法
     - 2.2 软件调试
 3. 系统运行与软件维护
-    - 3.1 
-    - 3.2 
-    - 3.3
+    - 3.1 系统转换计划
+    - 3.2 软件维护
 ---
+
 
 # 一、面向对象设计
 
@@ -189,6 +189,42 @@
 3. 测试从一个已知的条件开始，使用预先定义的过程，有预知的结果;调试从一个未知的条件开始，结束的过程不可预计
 4. 测试过程可以事先设计，进度可以事先确定;调试不能描述过程或持续时间
 
+# 三、系统运行与软件维护
 
+## 3.1 系统转换计划
 
+![img.png](images/59.png)
 
+1. 淘汰策略:
+
+遗留系统的技术含量较低，且具有较低的业务价值。对遗留系统的完全淘汰是企业资源的根本浪费，系统分析师应该善于“变废为宝”，
+通过对遗留系统功能的理解和借鉴，可以帮助新系统的设计，降低新系统开发的风险。
+
+2. 继承策略:
+
+遗留系统的技术含量较低，已经满足企业运作的功能或性能要求，但具有较高的商业价值，目前企业的业务尚紧密依赖该系统。
+对这种遗留系统的演化策略为继承。在开发新系统时，需要完全兼容遗留系统的功能模型和数据模型。为了保证业务的连续性，
+新老系统必须并行运行一段时间，再逐渐切换到新系统上运行。
+
+3. 改造策略:
+
+遗留系统具有较高的业务价值，基本上能够满足企业业务运作和决策支持的需要。这种系统可能建成的时间还很短，
+对这种遗留系统的演化策略为改造。改造包括系统功能的增强和数据模型的改造两个方面。系统功能的增强是指在原有系统的基础上增加新的应用要求，
+对遗留系统本身不做改变;数据模型的改造是指将遗留系统的旧的数据模型向新的数据模型的转化。
+
+4. 集成策略:
+
+遗留系统的技术含量较高，但其业务价值较低，可能只完成某个部门(或子公司)的业务管理。这种系统在各自的局部领域里工作良好，
+但对于整个企业来说，存在多个这样的系统，不同的系统基于不同的平台、不同的数据模型，形成了一个个信息孤岛，
+对这种遗留系统的演化策略为集成。
+
+![img.png](images/60.png)
+
+![img.png](images/61.png)
+
+## 3.2 软件维护
+
+1. 正确性维护∶指改正在系统开发阶段已发生而系统测试阶段尚未发现的错误。
+2. 适应性维护︰指使应用软件适应信息技术变化和管理需求变化而进行的修改。企业的外部市场环境和管理需求的不断变化也使得各级管理人员不断提出新的信息需求。
+3. 完善性维护︰扩充功能和改善性能而进行的修改。对已有的软件系统增加一些在系统分析和设计阶段中没有规定的功能与性能特征。
+4. 预防性维护∶为了改进应用软件的可靠性和可维护性，为了适应未来的软硬件环境的变化，应主动增加预防性的新的功能，以使用系统适应各类变化而不被淘汰。如将专用报表功能改成通用报表生成功能，以适应将来报表格式的变化。
