--- a/02-SeniorArchitectTest各个章节知识点/03-软件架构/01-软件架构.md
+++ b/02-SeniorArchitectTest各个章节知识点/03-软件架构/01-软件架构.md
@@ -80,7 +80,7 @@
 
 ![img.png](images/06.png)
 
-## 2.3 独立构件风格
+## 2.3 独立构件风格(隐式调用)
 
 进程通信
 - 构件是独立的过程，**连接件是消息传递**。构件通常是命名过程，消息传递的方式可以是点对点、异步或同步方式，以及远程过程（方法）调用等。
@@ -119,6 +119,39 @@
 ![img.png](images/07.png)
 
 ![img.png](images/08.png)
+
+## 2.6 闭环控制架构
+
+当软件被用来操作一个物理系统时，软件与硬件之间可以粗略地表示为一个反馈循环，这个反馈循环通过接受一定的输入，
+确定一系列的输出，最终使环境达到一个新的状态。适合于嵌入式系统，涉及连续的动作与状态。
+
+![img.png](images/09.png)
+
+## 2.7 C2风格
+
+C2架构的基本规则︰
+- 构件和连接件都有一个顶部和一个底部
+- 构件的顶部要连接到连接件的底部，构件的底部要连接到连接件的顶部，构件之间不允许直连
+- 一个连接件可以和任意数目的其它构件和连接件连接
+- 当两个连接件进行直接连接时，必须由其中一个的底部到另一个的顶部。
+
+![img.png](images/10.png)
+
+## 2.8 分层架构风格
+
+![img_1.png](images/11.png)
+
+![img.png](images/12.png)
+
+![img.png](images/13.png)
+
+![img.png](images/14.png)
+
+![img.png](images/15.png)
+
+## 2.9 MVC架构风格
+
+
 
 # 三、架构描述语言ADL
 
